<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mypc.materialdesigncolors.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#F44336">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/red"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#F44336"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/pink"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#E91E63">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/pink"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#E91E63"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/purple"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#9C27B0">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/purple"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#9C27B0"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/deep_purple"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#673AB7">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/deep_purple"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#673AB7"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/indigo"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#3F51B5">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/indigo"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#3F51B5"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#2196F3">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/blue"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#2196F3"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/light_blue"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#03A9F4">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/light_blue"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#03A9F4"
                android:textColor="#000000" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/cyan"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#00BCD4">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/cyan"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#00BCD4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/teal"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#009688">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/teal"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#009688"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#4CAF50">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/green"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#4CAF50" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/light_green"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#8BC34A">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/light_green"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#8BC34A" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/lime"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#CDDC39">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/lime"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#CDDC39" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/yellow"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FFEB3B">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/yellow"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#FFEB3B" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/amber"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FFC107">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/amber"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#FFC107" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/orange"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FF9800">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/orange"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#FF9800" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/deep_orange"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FF5752">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/deep_orange"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#FF5752"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/brown"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#795548">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/brown"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#795548"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/grey"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#9E9E9E">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/grey"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#9E9E9E"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/blue_grey"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#607D8B">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/blue_grey"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#607D8B"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/black"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#000000">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/black"
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:text=" "
                android:textColor="#FFFFFF" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#000000"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/white"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FFFFFF">

            <TextView
                style="@style/Color_Name_MainActivity"
                android:text="@string/white"
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Number_MainActivity"
                android:text=" "
                android:textColor="#000000" />

            <TextView
                style="@style/Color_Code_MainActivity"
                android:text="#FFFFFF" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
